feat: add streaming mode configuration to SettingsPanel with SystemCore integration
- Add UI controls: enable checkbox, mode selector, description label, start/stop buttons
- Implement 8 streaming modes: EVERYTHING, MARKET_DATA, ACCOUNT_DATA, TICKER_ONLY, TRADES_ONLY, ORDER_BOOK_ONLY, SAFE_DEFAULT, CUSTOM
- Integrate with SystemCore.startStreaming(tradePair, mode) and stopStreaming() methods
- Persist streaming preferences (mode and enabled flag) using Java Preferences API
- Add streaming status display with real-time updates
- Modify setupUi(), loadSettings(), saveSettings(), applySettings(), resetSettings() for streaming support
- Update UI button states based on streaming active/inactive
- Add helper methods: updateStreamingModeDescription(), handleStartStreaming(), handleStopStreaming(), updateStreamingUI(), updateStreamingStatusUI(), saveStreamingSettings()